.k8s/default/Deployment.elastic-cluster.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":null,"generation":1,"labels":{"app":"elastic-cluster"},"name":"elastic-cluster","namespace":"default","selfLink":"/apis/extensions/v1beta1/namespaces/default/deployments/elastic-cluster"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":2,"selector":{"matchLabels":{"app":"elastic-cluster"}},"strategy":{"rollingUpdate":{"maxS [...]
  creationTimestamp: null
  generation: 1
  labels:
    app: elastic-cluster
  name: elastic-cluster
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/elastic-cluster
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: elastic-cluster
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: elastic-cluster
    spec:
      containers:
      - env:
        - name: http.max_content_length
          value: 500mb
        - discovery.type:
          value: single-node
        image: docker.elastic.co/elasticsearch/elasticsearch:6.5.1
        imagePullPolicy: IfNotPresent
        name: elastic-cluster
        ports:
        - containerPort: 9200
          name: elastic
          protocol: TCP
        - containerPort: 9300
          name: elastic-udp
          protocol: UDP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elastic-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: elastic-data
        persistentVolumeClaim:
          claimName: uw-elasticsearch
status: {}
