.k8s/default/Deployment.uw-api-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "73"
  creationTimestamp: null
  generation: 1
  labels:
    run: uw-api-web
  name: uw-api-web
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/uw-api-web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: uw-api-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        date: "1542449804"
        run: uw-api-web
    spec:
      containers:
      - image: gcr.io/unicode-wiki/uw-api:dev6.0
        imagePullPolicy: IfNotPresent
        name: uw-api-web
        ports:
        - containerPort: 3001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
