.k8s/default/Deployment.uw-app-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "86"
  creationTimestamp: null
  generation: 1
  labels:
    run: uw-app-web
  name: uw-app-web
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/uw-app-web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: uw-app-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        date: "1543449299"
        run: uw-app-web
    spec:
      containers:
      - image: gcr.io/unicode-wiki/uw-app:dev4-0
        imagePullPolicy: IfNotPresent
        name: uw-app-web
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 31
status: {}
