.k8s/default/Deployment.uw-mongo-mongodb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: mongodb
    chart: mongodb-4.9.0
    heritage: Tiller
    release: uw-mongo
  name: uw-mongo-mongodb
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/uw-mongo-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      release: uw-mongo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb
        chart: mongodb-4.9.0
        release: uw-mongo
    spec:
      containers:
      - env:
        - name: MONGODB_USERNAME
        - name: MONGODB_DATABASE
        - name: MONGODB_ENABLE_IPV6
          value: "yes"
        - name: MONGODB_EXTRA_FLAGS
        image: docker.io/bitnami/mongodb:4.0.3
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - db.adminCommand('ping')
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: uw-mongo-mongodb
        ports:
        - containerPort: 27017
          name: mongodb
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - db.adminCommand('ping')
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /bitnami/mongodb
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 0
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: uw-mongo-mongodb
status: {}
