.k8s/default/Deployment.uw-search-service-web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"labels":{"run":"uw-search-service-web"},"name":"uw-search-service-web","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"run":"uw-search-service-web"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":1},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"run":"uw-search-service-web"}},"spec":{"containers":[{"image":"gcr.io/unicode-wiki/uw-sea [...]
  creationTimestamp: null
  generation: 1
  labels:
    run: uw-search-service-web
  name: uw-search-service-web
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/uw-search-service-web
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: uw-search-service-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: uw-search-service-web
    spec:
      containers:
      - image: gcr.io/unicode-wiki/uw-search-service:0.4.0
        imagePullPolicy: IfNotPresent
        name: uw-search-service-web
        ports:
        - containerPort: 5001
          protocol: TCP
        resources:
          requests:
            cpu: 50m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
