.k8s/default/Service.elastic-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"app":"elastic-cluster"},"name":"elastic-cluster","namespace":"default","selfLink":"/api/v1/namespaces/default/services/elastic-cluster"},"spec":{"ports":[{"name":"elastic","port":9200,"protocol":"TCP","targetPort":"elastic"},{"name":"elastic-udp","port":9300,"protocol":"UDP","targetPort":"elastic-udp"}],"selector":{"app":"elastic-cluster"},"sessionAffinity":"None","type":"ClusterIP"},"statu [...]
  creationTimestamp: null
  labels:
    app: elastic-cluster
  name: elastic-cluster
  selfLink: /api/v1/namespaces/default/services/elastic-cluster
spec:
  ports:
  - name: elastic
    port: 9200
    protocol: TCP
    targetPort: elastic
  - name: elastic-udp
    port: 9300
    protocol: UDP
    targetPort: elastic-udp
  selector:
    app: elastic-cluster
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
