.k8s/default/Service.kibana.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"kibana"},"name":"kibana","namespace":"default"},"spec":{"ports":[{"name":"http","port":5601}],"selector":{"app":"kibana"}}}
  creationTimestamp: null
  labels:
    app: kibana
  name: kibana
  selfLink: /api/v1/namespaces/default/services/kibana
spec:
  ports:
  - name: http
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
