.k8s/default/Service.kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetes
  selfLink: /api/v1/namespaces/default/services/kubernetes
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
status:
  loadBalancer: {}
