.k8s/default/Service.uw-api-graph.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: uw-api-graph
  name: uw-api-graph
  selfLink: /api/v1/namespaces/default/services/uw-api-graph
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    run: uw-api-graph
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
