.k8s/default/Service.uw-api-web.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: uw-api-web
  name: uw-api-web
  selfLink: /api/v1/namespaces/default/services/uw-api-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    run: uw-api-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
