.k8s/default/Service.uw-app-web.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: uw-app-web
  name: uw-app-web
  selfLink: /api/v1/namespaces/default/services/uw-app-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: uw-app-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
