.k8s/default/Service.uw-mongo-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongodb
    chart: mongodb-4.9.0
    heritage: Tiller
    release: uw-mongo
  name: uw-mongo-mongodb
  selfLink: /api/v1/namespaces/default/services/uw-mongo-mongodb
spec:
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: mongodb
  selector:
    app: mongodb
    release: uw-mongo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
