.k8s/default/Ingress.unicode-wiki-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","kubernetes.io/tls-acme":"true","nginx.ingress.kubernetes.io/configuration-snippet":"if ($host = \"www.unicode.wiki\" ) {\n  return 301 https://unicode.wiki$request_uri;\n}\n"},"name":"unicode-wiki-ingress","namespace":"default"},"spec":{"rules":[{"host":"unicode.wiki","http":{"paths":[{"backend":{"serviceName":"uw-app-web","servicePort":80},"path":"/"}]}},{"host":"www.unico [...]
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = "www.unicode.wiki" ) {
        return 301 https://unicode.wiki$request_uri;
      }
  creationTimestamp: null
  generation: 1
  name: unicode-wiki-ingress
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/unicode-wiki-ingress
spec:
  rules:
  - host: unicode.wiki
    http:
      paths:
      - backend:
          serviceName: uw-app-web
          servicePort: 80
        path: /
  - host: www.unicode.wiki
    http:
      paths:
      - backend:
          serviceName: uw-app-web
          servicePort: 80
        path: /
  - host: api.unicode.wiki
    http:
      paths:
      - backend:
          serviceName: uw-api-web
          servicePort: 80
        path: /
  - host: graph.unicode.wiki
    http:
      paths:
      - backend:
          serviceName: uw-api-graph-web
          servicePort: 80
        path: /
  tls:
  - hosts:
    - unicode.wiki
    - www.unicode.wiki
    - api.unicode.wiki
    - graph.unicode.wiki
    secretName: unicode-wiki-tls
status:
  loadBalancer: {}
